--- a/.beagle.yml
+++ b/.beagle.yml
@@ -36,7 +36,7 @@ steps:
         from_secret: SOCKS5_PROXY
 
   - name: golang
-    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.20
+    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.19-loongnix
     environment:
       VERSION: v1.6.20-beagle
     commands:
