--- a/.beagle.yml
+++ b/.beagle.yml
@@ -38,9 +38,9 @@ steps:
   - name: golang
     image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.19-loongnix
     environment:
-      VERSION: v1.6.20-beagle
+      VERSION: v1.6.21-beagle
     commands:
-      - git apply .beagle/v1.6-add-loong64-support.patch
+      # - git apply .beagle/v1.6-add-loong64-support.patch
       - bash ./.beagle/build.sh
 
   - name: docker-amd64
@@ -53,7 +53,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-amd64
       cwd: _output
       repo: wod/containerd
-      version: v1.6.20
+      version: v1.6.21
       channel: amd64
       args: 'TARGETOS=linux,TARGETARCH=amd64'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -72,7 +72,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-arm64
       cwd: _output
       repo: wod/containerd
-      version: v1.6.20
+      version: v1.6.21
       channel: arm64
       args: 'TARGETOS=linux,TARGETARCH=arm64'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -91,7 +91,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-ppc64le
       cwd: _output
       repo: wod/containerd
-      version: v1.6.20
+      version: v1.6.21
       channel: ppc64le
       args: 'TARGETOS=linux,TARGETARCH=ppc64le'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -110,7 +110,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-mips64le
       cwd: _output
       repo: wod/containerd
-      version: v1.6.20
+      version: v1.6.21
       channel: mips64le
       args: 'TARGETOS=linux,TARGETARCH=mips64le'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -129,7 +129,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-mips64le
       cwd: _output
       repo: wod/containerd
-      version: v1.6.20
+      version: v1.6.21
       channel: loong64
       args: 'TARGETOS=linux,TARGETARCH=loong64'
       registry: registry.cn-qingdao.aliyuncs.com
