--- a/.beagle.yml
+++ b/.beagle.yml
@@ -36,11 +36,10 @@ steps:
         from_secret: SOCKS5_PROXY
 
   - name: golang
-    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.19-loongnix
+    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.20-loongnix
     environment:
       VERSION: v1.7.2-beagle
     commands:
-      # - git apply .beagle/v1.6-add-loong64-support.patch
       - bash ./.beagle/build.sh
 
   - name: docker-amd64
@@ -119,24 +118,24 @@ steps:
       registry_password:
         from_secret: REGISTRY_PASSWORD_ALIYUN
 
-  # - name: docker-loong64
-  #   image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker:1.0
-  #   volumes:
-  #     - name: docker
-  #       path: /var/run/docker.sock
-  #   settings:
-  #     dockerfile: .beagle/dockerfile
-  #     base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-mips64le
-  #     cwd: _output
-  #     repo: wod/containerd
-  #     version: v1.7.2
-  #     channel: loong64
-  #     args: 'TARGETOS=linux,TARGETARCH=loong64'
-  #     registry: registry.cn-qingdao.aliyuncs.com
-  #     registry_user:
-  #       from_secret: REGISTRY_USER_ALIYUN
-  #     registry_password:
-  #       from_secret: REGISTRY_PASSWORD_ALIYUN
+  - name: docker-loong64
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker:1.0
+    volumes:
+      - name: docker
+        path: /var/run/docker.sock
+    settings:
+      dockerfile: .beagle/dockerfile
+      base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-amd64
+      cwd: _output
+      repo: wod/containerd
+      version: v1.7.2
+      channel: loong64
+      args: 'TARGETOS=linux,TARGETARCH=loong64'
+      registry: registry.cn-qingdao.aliyuncs.com
+      registry_user:
+        from_secret: REGISTRY_USER_ALIYUN
+      registry_password:
+        from_secret: REGISTRY_PASSWORD_ALIYUN
 
 ---
 kind: secret
