--- a/.beagle.yml
+++ b/.beagle.yml
@@ -38,7 +38,7 @@ steps:
   - name: golang
     image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.20-loongnix
     environment:
-      VERSION: v1.7.5-beagle
+      VERSION: v1.7.9-beagle
     commands:
       - bash ./.beagle/build.sh
 
@@ -52,7 +52,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-amd64
       cwd: _output
       repo: wod/containerd
-      version: v1.7.5
+      version: v1.7.9
       channel: amd64
       args: 'TARGETOS=linux,TARGETARCH=amd64'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -71,7 +71,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-arm64
       cwd: _output
       repo: wod/containerd
-      version: v1.7.5
+      version: v1.7.9
       channel: arm64
       args: 'TARGETOS=linux,TARGETARCH=arm64'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -90,7 +90,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-ppc64le
       cwd: _output
       repo: wod/containerd
-      version: v1.7.5
+      version: v1.7.9
       channel: ppc64le
       args: 'TARGETOS=linux,TARGETARCH=ppc64le'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -109,7 +109,7 @@ steps:
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-mips64le
       cwd: _output
       repo: wod/containerd
-      version: v1.7.5
+      version: v1.7.9
       channel: mips64le
       args: 'TARGETOS=linux,TARGETARCH=mips64le'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -118,24 +118,24 @@ steps:
       registry_password:
         from_secret: REGISTRY_PASSWORD_ALIYUN
 
-  - name: docker-loong64
-    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker:1.0
-    volumes:
-      - name: docker
-        path: /var/run/docker.sock
-    settings:
-      dockerfile: .beagle/dockerfile
-      base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-amd64
-      cwd: _output
-      repo: wod/containerd
-      version: v1.7.5
-      channel: loong64
-      args: 'TARGETOS=linux,TARGETARCH=loong64'
-      registry: registry.cn-qingdao.aliyuncs.com
-      registry_user:
-        from_secret: REGISTRY_USER_ALIYUN
-      registry_password:
-        from_secret: REGISTRY_PASSWORD_ALIYUN
+  # - name: docker-loong64
+  #   image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker:1.0
+  #   volumes:
+  #     - name: docker
+  #       path: /var/run/docker.sock
+  #   settings:
+  #     dockerfile: .beagle/dockerfile
+  #     base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-amd64
+  #     cwd: _output
+  #     repo: wod/containerd
+  #     version: v1.7.9
+  #     channel: loong64
+  #     args: 'TARGETOS=linux,TARGETARCH=loong64'
+  #     registry: registry.cn-qingdao.aliyuncs.com
+  #     registry_user:
+  #       from_secret: REGISTRY_USER_ALIYUN
+  #     registry_password:
+  #       from_secret: REGISTRY_PASSWORD_ALIYUN
 
 ---
 kind: secret
