--- a/.beagle.yml
+++ b/.beagle.yml
@@ -36,7 +36,7 @@ steps:
         from_secret: SOCKS5_PROXY
 
   - name: golang
-    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.20-loongnix
+    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.21
     environment:
       VERSION: v1.7.9-beagle
     commands:
